[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/cup.gd" type="Script" id=2]
[ext_resource path="res://counter_mockup.png" type="Texture" id=3]
[ext_resource path="res://assets/clickable_item.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/cup.png" type="Texture" id=5]

[node name="counter" type="TextureRect"]
margin_left = 54.0
margin_top = 41.0
margin_right = 207.0
margin_bottom = 75.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caramel" parent="." instance=ExtResource( 4 )]
margin_left = 112.0
margin_top = 7.0
margin_right = 128.0
margin_bottom = 14.0
cook_time = 1
sprite = "caramel"
creates_drink = true

[node name="chocolate" parent="." instance=ExtResource( 4 )]
margin_left = 86.184
margin_top = 6.0
margin_right = 102.184
margin_bottom = 13.0
cook_time = 1
sprite = "chocolate"
creates_drink = true

[node name="vanilla" parent="." instance=ExtResource( 4 )]
margin_left = 100.0
margin_top = 7.0
margin_right = 116.0
margin_bottom = 14.0
cook_time = 1
sprite = "vanilla"
creates_drink = true

[node name="strawberry" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 87.0
margin_top = 6.0
margin_right = 103.0
margin_bottom = 13.0
cook_time = 1
sprite = "strawberry"
creates_drink = true

[node name="cinnamon" parent="." instance=ExtResource( 4 )]
margin_left = 79.0
margin_top = 21.0
margin_right = 95.0
margin_bottom = 28.0
cook_time = 1
sprite = "cinnamon"
creates_drink = true

[node name="honey" parent="." instance=ExtResource( 4 )]
margin_left = 68.0
margin_top = 13.0
margin_right = 84.0
margin_bottom = 20.0
cook_time = 1
sprite = "honey"
creates_drink = true

[node name="sugar" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 50.0
margin_top = 9.0
margin_right = 66.0
margin_bottom = 16.0
cook_time = 1
sprite = "sugar"
creates_drink = true

[node name="black_tea" parent="." instance=ExtResource( 4 )]
margin_left = 126.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 25.0
cook_time = 1
sprite = "black tea"
creates_drink = true

[node name="green_tea" parent="." instance=ExtResource( 4 )]
margin_left = 129.0
margin_top = 6.0
margin_right = 145.0
margin_bottom = 13.0
cook_time = 1
sprite = "green tea"
creates_drink = true

[node name="cup" type="TextureButton" parent="."]
margin_left = 51.0
margin_top = 14.0
margin_right = 65.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="espresso_machine" parent="." instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 8.0
cook_time = 1
sprite = "shot"
creates_drink = true

[node name="pitcher" parent="." instance=ExtResource( 4 )]
margin_left = 30.0
margin_top = 19.0
margin_right = 46.0
margin_bottom = 26.0
cook_time = 1
sprite = "milk"
creates_drink = true
[connection signal="gui_input" from="cup" to="cup" method="_on_cup_gui_input"]
